@@ -117,3 +117,24 @@ SOURCE_GROUP("Settings" REGULAR_EXPRESSION .*include/settings/.*)
 SOURCE_GROUP("Common Files" REGULAR_EXPRESSION .*include/.*)
 
 SET_TARGET_PROPERTIES(${TARGET} PROPERTIES FOLDER "core")
+
+IF(GTEST_FOUND)
+	INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIR})
+	SET(SRCS
+		performance_data_test.cpp
+	)
+	ADD_EXECUTABLE(${TARGET}_test ${SRCS})
+	ADD_TEST(${TARGET}_test ${TARGET}_test)
+	TARGET_LINK_LIBRARIES(${TARGET}_test
+		${GTEST_GTEST_LIBRARY}
+		${GTEST_GTEST_MAIN_LIBRARY}
+
+#		${Boost_FILESYSTEM_LIBRARY}
+#		${Boost_PROGRAM_OPTIONS_LIBRARY}
+#		${Boost_THREAD_LIBRARY}
+		${NSCP_DEF_PLUGIN_LIB}
+		${EXTRA_LIBS}
+		settings_manager
+	)
+	SET_TARGET_PROPERTIES(${TARGET}_test PROPERTIES FOLDER "tests")
+ENDIF(GTEST_FOUND)
