@@ -15,7 +15,7 @@ IF(WIN32)
 	SET(reporter_SRCS ${reporter_SRCS}
 		${NSCP_INCLUDEDIR}/ServiceCmd.cpp
 		reporter.h
-		atdafx.h
+		stdafx.h
 	)
 	SET(EXTRA_LIBS Wininet.lib)
 ENDIF(WIN32)
